# kafka-bike-sharing-ml-streaming

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
models/: metrics.txt
src/: config.py  output_consumer.py  producer.py  stream_processor.py  topics.py  train_model.py
